make sure the VR selector is visible

--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -116,6 +116,14 @@ h2 {
     margin: 10px;
 }
 
+#elm-main {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .aframe-container {
 }
 
