--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -34,5 +34,13 @@ h2 {
     margin: 10px;
 }
 
+#elm-main {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .aframe-container {
 }
